--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.2",
+    "@vue-hero-icons/outline": "^1.7.2",
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
+    "luxon": "^1.27.0",
     "vue": "^2.6.11",
     "vue2-leaflet": "^2.7.0"
   },
