--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "leaflet": "^1.7.1",
     "luxon": "^1.27.0",
     "vue": "^2.6.11",
-    "vue2-leaflet": "^2.7.0"
+    "vue-luxon": "^0.10.0",
+    "vue2-leaflet": "^2.7.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.1.2",
