--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
     "luxon": "^1.27.0",
+    "portal-vue": "^2.1.7",
     "vue": "^2.6.11",
     "vue-luxon": "^0.10.0",
     "vue2-leaflet": "^2.7.0",
